# solana-oracle-escrow

./: Anchor.toml  package.json
programs/solana-oracle-escrow/: Cargo.toml
programs/solana-oracle-escrow/src/: errors.rs  lib.rs  state.rs
programs/solana-oracle-escrow/src/instructions/: deposit.rs  mod.rs  withdraw.rs
tests/: solana-oracle-escrow.ts
